# Directed-Study-Spring-2025

./: .gitignore  CMakeLists.txt  Directed Study Spring 2025.sln
1D FVS Library/: 1D FVS Library.cpp  1D FVS Library.vcxproj  1D FVS Library.vcxproj.filters  1DFVSLibrary.h
1D Sod Shock Tube (With Libraries)/: 1D Sod Shock Tube (With Libraries).cpp  1D Sod Shock Tube (With Libraries).vcxproj  1D Sod Shock Tube (With Libraries).vcxproj.filters  1DSodShock.csv
2D FVS Library/: 2D FVS Library.cpp  2D FVS Library.vcxproj  2D FVS Library.vcxproj.filters  2DFVSLibrary.h  CMakeLists.txt
2D FVS with Chemistry/: 2D FVS with Chemistry.cpp  2D FVS with Chemistry.vcxproj  2D FVS with Chemistry.vcxproj.filters  2DFVSWithChemistry.h
2D Shock Shock (With Libraries)/: 2D Shock Shock (With Libraries).cpp  2D Shock Shock (With Libraries).vcxproj  2D Shock Shock (With Libraries).vcxproj.filters
Chemical Equilibrium/: CMakeLists.txt  Chemical Equilibrium.vcxproj  Chemical Equilibrium.vcxproj.filters  ChemicalEquilibrium.cpp
Chemical Equilibrium Shock Tube/: ChemEqShockTube.cpp  Chemical Equilibrium Shock Tube.vcxproj  Chemical Equilibrium Shock Tube.vcxproj.filters
DPLR Finite Volume/: 100x100_Cylinder_CFL_1.000000_Solution.csv  100x100_Flat Plate_Solution.csv  100x200_Flat Plate_Solution.csv  100x50_Cylinder_CFL_0.500000_Solution.csv  100x50_Cylinder_CFL_1.000000_Solution.csv  100x50_Cylinder_CFL_2.000000_Solution.csv  100x50_Cylinder_Solution.csv  100x50_Flat Plate_Solution.csv  100x50_Ramp_CFL_0.500000_Solution.csv  100x50_Ramp_CFL_1.000000_Solution.csv  100x50_Ramp_Solution.csv  101x25_Ramp_Solution.csv  101x51_Cylinder_Solution.csv  101x51_Ramp_Solution.csv  1D VISCOUS.csv  200x100_Cylinder_CFL_1.000000_Solution.csv  200x100_Cylinder_Solution.csv  200x100_Ramp_Solution.csv  25x25_Flat Plate_Solution.csv  2DSodShock.vtk  400x200_Ramp_Solution.csv  50x1000_Ramp_Solution.csv  50x100_Flat Plate_Solution.csv  50x100_Ramp_Solution.csv  50x25_Cylinder_Solution.csv  50x25_Ramp_CFL_0.500000_Solution.csv  50x25_Ramp_Solution.csv  50x50_Flat Plate_Solution.csv  51x25_Cylinder_Solution.csv  52x25_Cylinder_Solution.csv  CMakeLists.txt  DPLR Finite Volume.cpp  DPLR Finite Volume.vcxproj  DPLR Finite Volume.vcxproj.filters  Inviscid 100x50_Double Cone_Solution.csv  Inviscid 100x50_Flat Plate_Solution.csv  Inviscid 100x50_Ramp_Solution.csv  Inviscid 200x100_Double Cone_Solution.csv  Inviscid 200x100_Flat Plate_Solution.csv  Inviscid_Ramp_DPLR.vtk  (+7 more)
Directed Study Spring 2025/: Directed Study Spring 2025.cpp  Directed Study Spring 2025.vcxproj  Directed Study Spring 2025.vcxproj.filters
GridGenerator/: CMakeLists.txt  GridGenerator.cpp  GridGenerator.h  GridGenerator.vcxproj  GridGenerator.vcxproj.filters
Linear Algebra Library/: CMakeLists.txt  Linear Algebra Library.cpp  Linear Algebra Library.vcxproj  Linear Algebra Library.vcxproj.filters  LinearAlgebra.h
Linear Algebra Library 2/: Linear Algebra Library 2.cpp  Linear Algebra Library 2.vcxproj  Linear Algebra Library 2.vcxproj.filters
TESTING/: 1DRamp.csv  1DSodShock.csv  2DRamp.csv  2TestingSodShock.csv  TESTING.cpp  TESTING.vcxproj  TESTING.vcxproj.filters  TestingSodShock.csv  TestingSodShock.vtk  plot_2D_grid.csv
TESTING 2/: TESTING 2.cpp  TESTING 2.vcxproj  TESTING 2.vcxproj.filters
VectorBuild/: ALL_BUILD.vcxproj  CMakeCache.txt  DirectedStudy.sln  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
VectorBuild/2D FVS Library/: 2DFVSLibrary.sln  2DFVSLibrary.vcxproj  2DFVSLibrary.vcxproj.filters  ALL_BUILD.vcxproj  cmake_install.cmake
VectorBuild/DPLR Finite Volume/: ALL_BUILD.vcxproj  (+4 more)
(+11 files in other folders)
